--- a/Recolección de Datos/index.html
+++ b/Recolección de Datos/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/Chat.css">
-    <link rel="stylesheet" href="assets/css/Simple-Bootstrap-Chat.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
-<body class="d-flex">
+<body class="d-flex" onload="load()">
     <div class="container-fluid d-flex flex-column" style="height: 100vh;">
         
         <div class="row flex-fill justify-content-center align-items-center order-2" id="Chat-Box" style="height: 80%;">
