Adcion de pantalla de confirmacion contraseña. Modulo Config

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/Features-Small-Icons-icons.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
+
     <style>
         .disabled {
             pointer-events: none;
@@ -83,6 +84,12 @@
                         <ul class="list-group" id="FiltrosLST" style="font-family: 'IBM Plex Sans', sans-serif;">
                             
                         </ul>
+
+                        <div style="height: 5px;background: var(--bs-primary);margin-top: 24px;margin-bottom: 14px;border-radius: 5px;"></div>
+                        <div style="margin-top: 10px;margin-bottom: 24px;">
+                            <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'IBM Plex Sans', sans-serif;">Modalidad de Testing</p><label class="switch"><input type="checkbox" /><span class="slider round"></span></label>
+                        </div>
+
                         <div class="card mb-4" style="margin-top: 24px;font-family: 'IBM Plex Sans', sans-serif;">
                             <div class="card-header py-3" style="font-family: 'IBM Plex Sans', sans-serif;">
                                 <h6 class="m-0" style="color: rgb(0,0,0);font-family: 'IBM Plex Sans', sans-serif;">Modulo de Recolección de Datos</h6>
@@ -115,3 +122,6 @@
 </body>
 
 </html>
+
+
+
