--- a/Modulo De config/Encuesta.html
+++ b/Modulo De config/Encuesta.html
@@ -19,10 +19,36 @@
             pointer-events: none;
             opacity: 0.6;
         }
+
+        #overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: none;
+            justify-content: center;
+            align-items: center;
+        }
+        #overlayContent {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 
 <body id="page-top" style="overflow-y: hidden;" onload="CE_DeactivateNavBy()">
+    
+    <div id="overlay">
+        <div id="overlayContent">
+            <input id="FollowUpQuestionTXT" class="form-control" type="text" name="Nombre" placeholder="Ingresa tu pregunta de seguimiento" style="width: 100%;font-family: 'IBM Plex Sans', sans-serif;" />
+            <button id="Agregar pregunta">Cerrar Overlay</button>
+        </div>
+    </div>
+
+
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: #eb7e20;">
             <div class="container-fluid d-flex flex-column p-0"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
