Módulo Configuración (Cambios Alberth, Emiliano), Módulo Recolección de Datos (Chat)

--- a/Modulo De config/ConfirmPassword.html
+++ b/Modulo De config/ConfirmPassword.html
@@ -33,8 +33,12 @@
                                         <h4 class="text-dark mb-2" style="font-family: 'IBM Plex Sans', sans-serif;">Confirma tu contraseña</h4>
                                         <p class="mb-4" style="font-family: 'IBM Plex Sans', sans-serif;">Es bueno verte de vuelta, crea una contraseña nueva y continua trabajando</p>
                                     </div>
-                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;">
-                                        <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="email" id="ConfirmPassword01" aria-describedby="emailHelp" placeholder="Ingresa tu contraseña nueva" name="password" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="email" id="ConfirmPassword02" aria-describedby="emailHelp" placeholder="Confirma tu contraseña" name="password" style="font-family: 'IBM Plex Sans', sans-serif;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family: 'IBM Plex Sans', sans-serif;">Restablecer Contraseña</button>
+                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;" id="resetPasswordFormConfirm">
+                                        <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;">
+                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword01" aria-describedby="emailHelp" placeholder="Ingresa tu contraseña nueva" name="password" style="font-family: 'IBM Plex Sans', sans-serif;">
+                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword02" aria-describedby="emailHelp" placeholder="Confirma tu contraseña" name="password" style="font-family: 'IBM Plex Sans', sans-serif;">
+                                        </div>
+                                        <button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family: 'IBM Plex Sans', sans-serif;">Restablecer Contraseña</button>
                                     </form>
                                     <div class="text-center" style="font-family: 'IBM Plex Sans', sans-serif;">
                                         <hr style="font-family: 'IBM Plex Sans', sans-serif;">
@@ -50,6 +54,7 @@
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="js/Script_Password_ResetConfirm.js"></script>
 </body>
 
 </html>
