--- a/Modulo De config/forgot-password.html
+++ b/Modulo De config/forgot-password.html
@@ -30,7 +30,7 @@
                                         <h4 class="text-dark mb-2" style="font-family: 'IBM Plex Sans', sans-serif;">Olvidaste Tu Contraseña?</h4>
                                         <p class="mb-4" style="font-family: 'IBM Plex Sans', sans-serif;">Es entendible, esas cosas pasan. Ingresa tu email en el espacio de abajo y te enviaremos un link para restablecerla&nbsp;</p>
                                     </div>
-                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;">
+                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;" id="passwordResetForm">
                                         <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="email" id="InputEmail" aria-describedby="emailHelp" placeholder="Ingresa tu direccion de Email" name="email" style="font-family: 'IBM Plex Sans', sans-serif;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family: 'IBM Plex Sans', sans-serif;">Restablecer Contraseña</button>
                                     </form>
                                     <div class="text-center" style="font-family: 'IBM Plex Sans', sans-serif;">
@@ -45,6 +45,7 @@
             </div>
         </div>
     </div>
+    <script src="js/Script_Password_Reset.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
