--- a/Modulo De config/login.html
+++ b/Modulo De config/login.html
@@ -29,7 +29,7 @@
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4" style="font-family: 'IBM Plex Sans', sans-serif;">Iniciar Sesion</h4>
                                     </div>
-                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;">
+                                    <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;" id="loginForm">
                                         <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="email" id="InputEmail" aria-describedby="emailHelp" placeholder="Email" name="email" style="font-family: 'IBM Plex Sans', sans-serif;"></div>
                                         <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="password" id="InputPassword" placeholder="Contraseña" name="password" style="font-family: 'IBM Plex Sans', sans-serif;"></div>
                                         <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;">
@@ -51,6 +51,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="js/Script_LoginAuth.js"></script>
 </body>
 
 </html>
