--- a/Modulo De config/register.html
+++ b/Modulo De config/register.html
@@ -27,7 +27,7 @@
                             <div class="text-center">
                                 <h4 class="text-dark mb-4" style="font-family: 'League Spartan', sans-serif;font-weight: bold;">Solicita Acceso</h4>
                             </div>
-                            <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;">
+                            <form class="user" style="font-family: 'IBM Plex Sans', sans-serif;" id="registerForm">
                                 <div class="mb-3" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="email" id="InputEmail" aria-describedby="emailHelp" placeholder="Correo Electronico" name="email" style="font-family: 'IBM Plex Sans', sans-serif;"></div>
                                 <div class="row mb-3" style="font-family: 'IBM Plex Sans', sans-serif;">
                                     <div class="col-sm-6 mb-3 mb-sm-0" style="font-family: 'IBM Plex Sans', sans-serif;"><input class="form-control form-control-user" type="password" id="PasswordInput" placeholder="Contraseña" name="password" style="font-family: 'IBM Plex Sans', sans-serif;"></div>
@@ -46,6 +46,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="js/Script_RegisterUsers.js"></script>
 </body>
 
 </html>
