--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -27,12 +27,13 @@
 
 
         </div><button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'IBM Plex Sans', sans-serif;" onclick="window.location.href='CreacionDeEstudio.html';">Crear Estudio</button>
-            <button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'IBM Plex Sans', sans-serif;" onclick="window.location.href='';">Cerrar Sesion</button>
+            <button class="btn btn-primary" type="button" style="margin: 10px;width: 25%;font-weight: bold;font-family: 'IBM Plex Sans', sans-serif;" onclick="logOut()">Cerrar Sesion</button>
 
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/script_PPCrearEstudio.js"></script>
+    <script src="js/Script_LogOutAuth.js"></script>
 </body>
 
 </html>
