Display de Espera de Respuesta arreglado

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -84,7 +84,7 @@
                         <ul class="list-unstyled" id="Message-List">
                             <li id="Typing-Msg" class="my-2" style="display: none;">
                                 <div class="d-flex justify-content-end align-items-center align-content-center align-self-end BotIMG-Div" style="width: 50px;height: 100%;padding-right: 2px;padding-left: 0px;">
-                                    <div class="text-truncate d-flex justify-content-center align-items-center align-content-center BotIMG-Cont" style="background: #d1d1d1;"><img class="BotIMG" src="" style="max-height: 100%;"></div>
+                                    <div class="text-truncate d-flex justify-content-center align-items-center align-content-center BotIMG-Cont" style="background: #d1d1d1;"><img class="BotIMG" id="typingMessage_BotIMG" src="" style="max-height: 100%;"></div>
                                 </div>
                                 <div class="card text-truncate justify-content-center align-items-center align-content-center d-inline-block" style="border-radius: 15px;border-bottom-left-radius: 0px;background: #454545;max-width: 75%;border-bottom-width: medium;">
                                     <div class="card-body text-truncate justify-content-center align-items-center align-content-center text-break text-center d-flex flex-column p-2" style="width: 100%;height: 100%;"><img id="LoadingGif" src="assets/img/Loading%20Dots.gif" style="width: 100%;height: 150%;margin-right: 6px;" width="58" height="42"></div>
