--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/custom-styles.css">
     <link rel="stylesheet" href="assets/css/Features-Small-Icons-icons.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
+    <link rel="stylesheet" href="assets/css/Chat.css">
+    <link rel="stylesheet" href="assets/css/Hover.css">
+    <link rel="stylesheet" href="assets/css/Responsiveness.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <style>
@@ -67,7 +71,7 @@
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
-            <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 10px; height: 1000px ;max-height: calc(100vh - 20px); overflow-y: auto;">
+            <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 10px; height: 100%; overflow-y: auto; background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover;">
 
 
 
@@ -104,9 +108,9 @@
                                     <ul class="list-unstyled" id="Message-List">
                                         <li id="Typing-Msg" class="my-2" style="display: none;">
                                             <div class="d-flex justify-content-end align-items-center align-content-center align-self-end BotIMG-Div" style="width: 50px;height: 100%;padding-right: 2px;padding-left: 0px;">
-                                                <div class="text-truncate d-flex justify-content-center align-items-center align-content-center BotIMG-Cont" style="background: #d1d1d1;"><img class="BotIMG" src="" style="max-height: 100%;"></div>
+                                                <div class="text-truncate d-flex justify-content-center align-items-center align-content-center BotIMG-Cont" style="background: #d1d1d1;"><img class="BotIMG" id="typingMessage_BotIMG" src="" style="max-height: 100%;"></div>
                                             </div>
-                                            <div class="card text-truncate justify-content-center align-items-center align-content-center d-inline-block" style="border-radius: 15px;border-bottom-left-radius: 0px;background: #454545;max-width: 75%;border-bottom-width: medium;">
+                                            <div class="card text-truncate justify-content-center align-items-center align-content-center d-inline-block" style="border-radius: 15px;border-bottom-left-radius: 0px;background: #454545;max-width: 75%;border-bottom-width: medium; border-color:#393939;">
                                                 <div class="card-body text-truncate justify-content-center align-items-center align-content-center text-break text-center d-flex flex-column p-2" style="width: 100%;height: 100%;"><img id="LoadingGif" src="assets/img/Loading%20Dots.gif" style="width: 100%;height: 150%;margin-right: 6px;" width="58" height="42"></div>
                                             </div>
                                         </li>
@@ -118,7 +122,7 @@
                     <div class="row justify-content-center align-items-center align-content-center order-3" id="Type-Box" style="background: rgba(170,167,170,0.16);padding-top: 6px;padding-right: 5px;padding-bottom: 6px;padding-left: 5px;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                         <div class="col align-content-center" id="TypeB-Container" style="height: 100%;">
                             <div class="row text-truncate" id="TypeB-BG" style="border-radius: 10px;background: #e05a30;">
-                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="height: 100%;width: 100%;border-radius: 10px;resize: none;padding-left: 10px;background: #ffffff;color: #072934;font-family: 'IBM Plex Sans', sans-serif;"></textarea></div>
+                                <div class="col-8 col-sm-8 col-md-8 col-lg-9 col-xl-8 col-xxl-9 p-0" style="height: 100%;"><textarea id="Message-Input" class="align-content-center border-0" placeholder="Escribir Mensaje..." style="outline: none; height: 100%;width: 100%;border-radius: 10px;resize: none;padding-left: 10px;background: #ffffff;color: #072934;font-family: 'IBM Plex Sans', sans-serif;"></textarea></div>
                                 <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 col-xxl-1 text-nowrap d-flex d-md-flex flex-fill justify-content-center align-items-center align-content-center p-0 col-1" id="btIMG-Cont" style="height: 100%;margin-right: 0px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;"><button class="btn d-flex justify-content-center align-items-center align-content-center mx-auto" id="btIMG" type="button" style="border-radius: 10px;width: 100%;height: 100%;padding: 0px 0px;padding-right: 0px;position: relative;overflow: hidden;"><input type="file" accept="image/*" id="fileInput" style="display:none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-image-fill" id="imageIcon" style="display: flex;">
                                             <path d="M.002 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V3zm1 9v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V9.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12zm5-6.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0"></path>
                                         </svg><img class="flash animated" id="imageInput" style="display:none;max-width:150%;object-fit:cover;position:absolute;"></button></div>
@@ -136,6 +140,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+
     <script src="Socrates.js"></script>
 </body>
 
