--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -84,8 +84,8 @@
                 <div class="container-fluid d-flex flex-row justify-content-start align-items-center align-content-center" id="Header-BG" style="height: 8%;width: 100%;background: #0f191fdc;backdrop-filter: blur(2px);-webkit-backdrop-filter: blur(2px);">
                     <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
                         <div class="col d-flex flex-column justify-content-center align-content-center" style="height: 100%;padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
-                            <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: 'League Spartan', sans-serif;margin-top: 6px;color: #aaa7aa;">Coso Bot</h1>
-                            <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;font-family: 'League Spartan', sans-serif;margin-top: -2px;color: #eb7e20;">En línea</p>
+                            <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: 'League Spartan', sans-serif;margin-top: 6px;color: #aaa7aa;">Socrates</h1>
+                            <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;font-family: 'League Spartan', sans-serif;margin-top: -2px;color: #eb7e20;">Desconectado</p>
                         </div>
                     </div>
                 </div>
