--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -17,6 +17,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/Script_Visualizar Resultados.js" defer></script>
+    <style>
+ 
+    </style>
 
 </head>
 
@@ -73,6 +76,9 @@
                     <div class="col" style="overflow-x: hidden;overflow-y: auto;height: calc(95vh - 20px); ">
                         <div class="tab-content">
                             <div id="ResumenGeneral" class="tab-pane fade" role="tabpanel">
+
+                                
+
                                 <label for="ComboBox_ResumenGeneralTy">Selecciona un estilo:</label>
                                 <select id="ComboBox_ResumenGeneralTy">
                                     <!-- se agrgan opciones narrative y  facutual-->
