--- a/Modulo De config/forgot-password.html
+++ b/Modulo De config/forgot-password.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en" data-bss-forced-theme="light" style="height: 100%;">
+<html data-bs-theme="light" lang="en" data-bss-forced-theme="light" style="height:100%;">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Forgotten Password - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/assets_accounts/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Spartan&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Brands.css">
-    <link rel="stylesheet" href="assets/css/Font%20Awesome%205%20Free.css">
-    <link rel="stylesheet" href="assets/css/Ionicons.css">
-    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/css/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/css/bs-theme-overrides.css">
-    <link rel="stylesheet" href="assets/css/css/Features-Small-Icons-icons.css">
-    <link rel="stylesheet" href="assets/css/css/untitled.css">
-    <link rel="stylesheet" href="assets/css/css/Hover.css">
-    <link rel="stylesheet" href="assets/css/css/Responsiveness.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
+    <link rel="stylesheet" href="assets/assets_accounts/css/Font%20Awesome%205%20Brands.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Font%20Awesome%205%20Free.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Ionicons.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/LineAwesome.css">
+    <link rel="stylesheet" href="assets/assets_accounts/fonts/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Features-Small-Icons-icons.css">
+
+    <link rel="stylesheet" href="assets/assets_accounts/css/untitled.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Hover.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Responsiveness.css">
 </head>
 
-<body class="d-flex justify-content-center align-items-center bg-gradient-primary" style="width: 100%;height: 100%;background: var(--bs-primary);">
-    <div class="container">
+<body class="d-flex justify-content-center align-items-center bg-gradient-primary" style="width:100%;height:100%;background:var(--bs-primary);">
+    <div class="container" style="z-index: 1;position: absolute;">
         <div class="row justify-content-center">
             <div class="col-md-9 col-lg-12 col-xl-10">
                 <div class="card border-0 shadow-lg o-hidden my-5">
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-flex">
-                                <div class="flex-grow-1 bg-password-image" style="background:url(&quot;assets/img/photo-1592308719722-d0b080852dff.jpg&quot;);background-size:cover;"></div>
+                                <div class="flex-grow-1 bg-password-image" style="background:url(&quot;assets/assets_accounts/img/photo-1592308719722-d0b080852dff.jpg&quot;);background-size:cover;"></div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h4 class="text-dark mb-2" style="font-family:'IBM Plex Sans', sans-serif;">Olvidaste Tu Contraseña?</h4>
+                                        <h4 class="text-dark mb-2" style="font-family:'IBM Plex Sans', sans-serif;">¿Olvidaste tu Contraseña?</h4>
                                         <p class="mb-4" style="font-family:'IBM Plex Sans', sans-serif;">Es entendible, esas cosas pasan. Ingresa tu email en el espacio de abajo y te enviaremos un link para restablecerla.&nbsp;</p>
                                     </div>
-                                    <form class="user" style="font-family:'IBM Plex Sans', sans-serif;">
-                                        <div class="mb-3" style="font-family:'IBM Plex Sans', sans-serif;"><input class="form-control form-control form-control-user" type="email" aria-describedby="emailHelp" id="InputEmail" name="email" placeholder="Ingresa tu direccion de Email" style="font-family:'IBM Plex Sans', sans-serif;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family:'IBM Plex Sans', sans-serif;">Restablecer Contraseña</button>
+                                    <p class="text-center" id="Error-PasswordReset" style="font-size:0.9rem;margin-left:0px;margin-bottom:5px;font-family:'League Spartan', sans-serif;text-decoration:underline;color:red;display:none;"> Error al enviar solicitud</p>
+                                    <form class="user" style="font-family:'IBM Plex Sans', sans-serif;" id="passwordResetForm">
+                                        <div class="mb-3" style="font-family:'IBM Plex Sans', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="email" aria-describedby="emailHelp" id="InputEmail" name="email" placeholder="Ingresa tu direccion de Email" style="font-family:'IBM Plex Sans', sans-serif;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family:'IBM Plex Sans', sans-serif;">Restablecer Contraseña</button>
                                     </form>
                                     <div class="text-center" style="font-family:'IBM Plex Sans', sans-serif;">
                                         <hr style="font-family:'IBM Plex Sans', sans-serif;"><a class="small" href="register.html" style="font-family:'IBM Plex Sans', sans-serif;">¡Crear una Cuenta!</a>
                                     </div>
-                                    <div class="text-center" style="font-family:'IBM Plex Sans', sans-serif;"><a class="small" href="login.html" style="font-family:'IBM Plex Sans', sans-serif;">¿Ya tienes una cuenta? Ingresa aqui</a></div>
+                                    <div class="text-center" style="font-family:'IBM Plex Sans', sans-serif;"><a class="small" href="login.html" style="font-family:'IBM Plex Sans', sans-serif;">¿Ya tienes una cuenta? Ingresa aquí</a></div>
                                 </div>
                             </div>
                         </div>
@@ -54,21 +54,23 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/js/bs-init.js"></script>
-    <script src="assets/js/js/theme.js"></script>
-    <script src="assets/js/Script_CrearEncuestador.js"></script>
-    <script src="assets/js/script_LanzarEncuesta.js"></script>
-    <script src="assets/js/script_LanzarEstudio.js"></script>
-    <script src="assets/js/Script_LoginAuth.js"></script>
-    <script src="assets/js/Script_LogOutAuth.js"></script>
-    <script src="assets/js/Script_Password_Reset.js"></script>
-    <script src="assets/js/Script_Password_ResetConfirm.js"></script>
-    <script src="assets/js/script_PPCrearEstudio.js"></script>
-    <script src="assets/js/Script_RegisterUsers.js"></script>
-    <script src="assets/js/ScriptSurv.js"></script>
+    <div class="container flex-column justify-content-center align-items-center align-content-center" id="Reset-Cont" style="z-index: 2;width: 100%;height: 100%;position: relative;padding: 0px;backdrop-filter: blur(3px);-webkit-backdrop-filter: blur(3px);border-radius: 10px;overflow: hidden;border-style: none;display: none;">
+        <div class="shadow-lg d-flex flex-column justify-content-center align-items-center align-content-center" style="width:50%;height:350px;border-radius:10px;overflow:hidden;">
+            <div class="row" style="width:100%;height:55%;background:#072934e9;">
+                <div class="col d-flex justify-content-center align-items-center align-content-center" style="background:transparent;"><i class="la la-envelope" style="font-size:8rem;color:#f0631d;"></i></div>
+            </div>
+            <div class="row" style="width:100%;height:45%;background:#eb7e20;">
+                <div class="col d-flex flex-column justify-content-center align-items-center align-content-center">
+                    <h1 style="font-family:'IBM Plex Sans', sans-serif;color:#2e3e43;margin-bottom:10px;">¡Listo! </h1>
+                    <p class="fw-normal text-center d-flex" style="font-family:'League Spartan', sans-serif;color:#ffffff;margin-bottom:5px;">El correo para restablecer su contraseña ha sido enviado</p><a id="Link-Login" href="#">Regresar al Login</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="assets/assets_accounts/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/assets_accounts/js/bs-init.js"></script>
+    <script src="assets/assets_accounts/js/theme.js"></script>
+    <script src="assets/assets_accounts/js/Script_Password_Reset.js"></script>
 </body>
 
 </html>
