--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -13,14 +13,25 @@
     <link rel="stylesheet" href="assets/css/Features-Small-Icons-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="assets/css/untitled.css">
+    <style>
+        .large-image {
+    width: 550px; /* Ajusta el tamaño según tus necesidades */
+    height: auto; /* Mantén la proporción de la imagen */
+}
+    </style>
 </head>
 
 <body style="width: 100%;" onload="deleteFromLocStrg()">
-    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-primary);height: 25vh;margin: 10px;border-radius: 5px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
-        <div class="sidebar-brand-icon rotate-n-15"><img class="mx-auto d-none d-md-block" data-bs-toggle="tooltip" data-bss-tooltip src="assets/img/NegroLogo.png" width="194" height="99" style="transform: rotate(23deg);width: 186px;height: 74px;filter: brightness(78%);" /></div>
-        <div class="sidebar-brand-text mx-3"><span data-bs-toggle="tooltip" data-bss-tooltip style="font-family: 'IBM Plex Sans', sans-serif;color: #072934;font-size: 49px;">CHEETAH RESEARCH</span></div>
+    <div class="text-center d-lg-flex justify-content-lg-center align-items-lg-center" style="background: var(--bs-black);height: 25vh;margin: 10px;border-radius: 3px;"><a class="navbar-brand align-items-center justify-content-xxl-end align-items-xxl-center sidebar-brand m-0" href="PaginaPrincipal.html">
+
+        <img class="mx-auto d-none d-md-block large-image" 
+         data-bs-toggle="tooltip" data-bss-tooltip 
+         src="assets/img/NegroLogo.png" 
+         alt="Negro Logo" />
+
+        
     </a></div>
-    <div class="card" id="contentCard_PaginaOverview" style="margin: 10px;height: 100vh;padding: 10px;">
+    <div class="card" id="contentCard_PaginaOverview" style="margin: 10px;height: 100vh;padding: 10px; ">
         <h1 style="color: var(--bs-body-bg);margin: 10px;background: var(--bs-primary);border-radius: 10px;padding: 05px;font-family: 'IBM Plex Sans', sans-serif;">SELECCIONAR ESTUDIO</h1>
         <div class="list-group" id="listgrouptudies" style="margin: 10px;font-family: 'IBM Plex Sans', sans-serif;">
 
